# extract-eval

./: README.md  demo.ipynb  demo.py  demo_array.ipynb  demo_compound.ipynb  pyproject.toml
examples/: 00_example_schema.ipynb  01_example_simple.ipynb  02_example_customize.ipynb  03_example_arrays.ipynb  04_example_semantic.ipynb  05_example_compound.ipynb  06_example_postprocess.ipynb  07_example_empty_values.ipynb  08_example_polymorphic.ipynb  08_example_polymorphic_fields.ipynb  demo.ipynb  demo1.ipynb  demo_postprocess.ipynb  miscellaneous.ipynb
src/struct_extract_eval/: __init__.py  evaluator.py  xeval.py
src/struct_extract_eval/batch/: __init__.py  llm_judge.py  process.py  semantic_comparator.py
src/struct_extract_eval/contrib/: __init__.py
src/struct_extract_eval/core/: field_result.py  instance_to_resolved_schema.py  json_utils.py  null_handling.py  record.py  schema.py  schema_inference.py  scoring.py  validation.py  xeval.py
src/struct_extract_eval/pipeline/: __init__.py  batch.py  llm_judge.py  record.py  semantic_comparator.py
tests/: test_array_align.py  test_batch.py  test_batch_error_handling.py  test_comparator_registry.py  test_comparator_result.py  test_evaluator.py  test_exact.py  test_instance_to_resolved_schema.py  test_json_utils.py  test_null_handling.py  test_numeric.py  test_oneof.py  test_record.py  test_registry.py  test_schema.py  test_schema_inference.py  test_scoring.py  test_semantic.py  test_skip.py  test_transform_registry.py  test_transforms.py  test_validation.py  test_xeval.py
tests/contrib/: test_formula.py
(+22 files in other folders)
