[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/struct_extract_eval"]

[project]
name = "struct-extract-eval"
version = "0.1.0"
description = "Domain-agnostic benchmark for evaluating LLM JSON extraction"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
pipeline = [
    "httpx>=0.24",
    "pyarrow>=12.0",
    "tqdm>=4.60",
]
methodology = [
    "scikit-learn>=1.3",
    "bert-score>=0.3",
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
